--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             margin: 0;
         }
         </style>
-        <title>Niveau de  déconfinement au 27/05/2020</title>
+        <title>Phase 2 du niveau de  déconfinement du 28/05/2020</title>
     </head>
     <body>
         <div id="map">
@@ -54,7 +54,7 @@
         }
         var map = L.map('map', {
             zoomControl:true, maxZoom:28, minZoom:1
-        }).fitBounds([[41.99564049802522,-5.043893962779799],[51.29424156825677,9.418165584097995]]);
+        }).fitBounds([[40.05308404892635,-9.34318248801329],[54.21000143390283,14.173955567971156]]);
         var hash = new L.Hash(map);
         map.attributionControl.setPrefix('<a href="https://github.com/tomchadwin/qgis2web" target="_blank">qgis2web</a> &middot; <a href="https://leafletjs.com" title="A JS library for interactive maps">Leaflet</a> &middot; <a href="https://qgis.org">QGIS</a>');
         var autolinker = new Autolinker({truncate: {length: 30, location: 'smart'}});
@@ -73,7 +73,6 @@
         .className += ' fas fa-ruler';
         var bounds_group = new L.featureGroup([]);
         function setBounds() {
-            map.setMaxBounds(map.getBounds());
         }
         map.createPane('pane_GoogleHybrid_0');
         map.getPane('pane_GoogleHybrid_0').style.zIndex = 400;
@@ -125,6 +124,13 @@
                         <td colspan="2">' + (feature.properties['Lien'] !== null ? autolinker.link(feature.properties['Lien'].toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
+                        <td colspan="2">' + (feature.properties['donnees-carte-synthese-tricolore_date'] !== null ? autolinker.link(feature.properties['donnees-carte-synthese-tricolore_date'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['donnees-carte-synthese-tricolore_code_departement'] !== null ? autolinker.link(feature.properties['donnees-carte-synthese-tricolore_code_departement'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['donnees-carte-synthese-tricolore_indicateur_synthese'] !== null ? autolinker.link(feature.properties['donnees-carte-synthese-tricolore_indicateur_synthese'].toLocaleString()) : '') + '</td>\
                     </tr>\
                 </table>';
             layer.bindPopup(popupContent, {maxHeight: 400});
@@ -159,6 +165,21 @@
                 fill: true,
                 fillOpacity: 1,
                 fillColor: 'rgba(247,0,0,1.0)',
+                interactive: true,
+            }
+                    break;
+                case 'VIGILANCE':
+                    return {
+                pane: 'pane_NiveaudedconfinementparDpartements_2',
+                opacity: 1,
+                color: 'rgba(35,35,35,1.0)',
+                dashArray: '',
+                lineCap: 'butt',
+                lineJoin: 'miter',
+                weight: 1.0, 
+                fill: true,
+                fillOpacity: 1,
+                fillColor: 'rgba(255,170,0,1.0)',
                 interactive: true,
             }
                     break;
@@ -232,7 +253,7 @@
                 return this._div;
             };
             title.update = function () {
-                this._div.innerHTML = '<h2>Niveau de  déconfinement au 27/05/2020</h2>';
+                this._div.innerHTML = '<h2>Phase 2 du niveau de  déconfinement du 28/05/2020</h2>';
             };
             title.addTo(map);
         var osmGeocoder = new L.Control.Geocoder({
@@ -246,7 +267,7 @@
         document.getElementsByClassName('leaflet-control-geocoder-icon')[0]
         .title += 'Search for a place';
         var baseMaps = {};
-        L.control.layers(baseMaps,{'<img src="legend/LIMITESDEREGIONS_3.png" /> LIMITES DE REGIONS': layer_LIMITESDEREGIONS_3,'Niveau de déconfinement par Départements<br /><table><tr><td style="text-align: center;"><img src="legend/NiveaudedconfinementparDpartements_2_NORMAL0.png" /></td><td>NORMAL</td></tr><tr><td style="text-align: center;"><img src="legend/NiveaudedconfinementparDpartements_2_RESTREINT1.png" /></td><td>RESTREINT</td></tr></table>': layer_NiveaudedconfinementparDpartements_2,"OSM Standard": layer_OSMStandard_1,"Google Hybrid": layer_GoogleHybrid_0,}).addTo(map);
+        L.control.layers(baseMaps,{'<img src="legend/LIMITESDEREGIONS_3.png" /> LIMITES DE REGIONS': layer_LIMITESDEREGIONS_3,'Niveau de déconfinement par Départements<br /><table><tr><td style="text-align: center;"><img src="legend/NiveaudedconfinementparDpartements_2_NORMAL0.png" /></td><td>NORMAL</td></tr><tr><td style="text-align: center;"><img src="legend/NiveaudedconfinementparDpartements_2_RESTREINT1.png" /></td><td>RESTREINT</td></tr><tr><td style="text-align: center;"><img src="legend/NiveaudedconfinementparDpartements_2_VIGILANCE2.png" /></td><td>VIGILANCE</td></tr></table>': layer_NiveaudedconfinementparDpartements_2,"OSM Standard": layer_OSMStandard_1,"Google Hybrid": layer_GoogleHybrid_0,}).addTo(map);
         setBounds();
         </script>
     </body>
