--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             margin: 0;
         }
         </style>
-        <title>Phase 2 du niveau de  déconfinement du 28/05/2020</title>
+        <title>Phase 2 du niveau de  déconfinement à compter du 02/06/2020</title>
     </head>
     <body>
         <div id="map">
@@ -253,7 +253,7 @@
                 return this._div;
             };
             title.update = function () {
-                this._div.innerHTML = '<h2>Phase 2 du niveau de  déconfinement du 28/05/2020</h2>';
+                this._div.innerHTML = '<h2>Phase 2 du niveau de  déconfinement à compter du 02/06/2020</h2>';
             };
             title.addTo(map);
         var osmGeocoder = new L.Control.Geocoder({
