--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             margin: 0;
         }
         </style>
-        <title>Phase 2 du niveau de  déconfinement à compter du 02/06/2020</title>
+        <title>Phase 3 du niveau de  déconfinement au 15/06/2020</title>
     </head>
     <body>
         <div id="map">
@@ -54,7 +54,7 @@
         }
         var map = L.map('map', {
             zoomControl:true, maxZoom:28, minZoom:1
-        }).fitBounds([[40.05308404892635,-9.34318248801329],[54.21000143390283,14.173955567971156]]);
+        }).fitBounds([[40.27783642078124,-9.34318248801329],[53.98524906204794,14.173955567971156]]);
         var hash = new L.Hash(map);
         map.attributionControl.setPrefix('<a href="https://github.com/tomchadwin/qgis2web" target="_blank">qgis2web</a> &middot; <a href="https://leafletjs.com" title="A JS library for interactive maps">Leaflet</a> &middot; <a href="https://qgis.org">QGIS</a>');
         var autolinker = new Autolinker({truncate: {length: 30, location: 'smart'}});
@@ -244,7 +244,7 @@
                 return this._div;
             };
             title.update = function () {
-                this._div.innerHTML = '<h2>Phase 2 du niveau de  déconfinement à compter du 02/06/2020</h2>';
+                this._div.innerHTML = '<h2>Phase 3 du niveau de  déconfinement au 15/06/2020</h2>';
             };
             title.addTo(map);
         var osmGeocoder = new L.Control.Geocoder({
